<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.RegisterActivity">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/login_shape_bk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_login_bk"
        app:layout_constraintBottom_toBottomOf="@+id/iv_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_app_title"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_19sdp"
        android:layout_marginTop="-45dp"
        android:layout_marginEnd="@dimen/_19sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_banner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/color_accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_register"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/text_title_register"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_19ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_auth_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_name"
                    style="@style/Input.Style.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_name_hint"
                    app:placeholderText="@string/label_name_placeholder"
                    app:startIconDrawable="@drawable/ic_round_person_24"
                    app:startIconTint="@color/color_accent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_email"
                    style="@style/Input.Style.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email_hint"
                    app:placeholderText="@string/label_email_placeholder"
                    app:startIconDrawable="@drawable/ic_round_email_24"
                    app:startIconTint="@color/color_accent">

                    <com.aad.storyapp.view.customview.CustomTextInputEmail
                        android:id="@+id/ed_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_password"
                    style="@style/Input.Style.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password_hint"
                    app:passwordToggleEnabled="true"
                    app:placeholderText="@string/label_password_placeholder"
                    app:startIconDrawable="@drawable/ic_round_key_24"
                    app:startIconTint="@color/color_accent">

                    <com.aad.storyapp.view.customview.CustomTextInputPassword
                        android:id="@+id/ed_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:includeFontPadding="false"
                    android:text="@string/text_title_register"
                    android:textColor="@color/color_secondary_light"
                    app:backgroundTint="@color/color_accent"
                    tools:text="@string/text_title_register" />

            </LinearLayout>

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:includeFontPadding="false"
                android:text="@string/text_already_have_account"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@+id/btn_to_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_auth_form" />

            <Button
                android:id="@+id/btn_to_login"
                style="@style/Input.Style.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_login"
                android:textColor="@color/color_primary"
                app:layout_constraintBottom_toBottomOf="@+id/already_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/already_have_account"
                app:layout_constraintTop_toTopOf="@+id/already_have_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>