<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.CreateStoryActivity">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/login_shape_bk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_login_bk"
        app:layout_constraintBottom_toBottomOf="@+id/iv_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_app_title"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_create_new_story"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_card_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/color_accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:elevation="@dimen/_9sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_bookmark_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_accent"
                tools:ignore="ContentDescription" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_story_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:elevation="@dimen/_8sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder"
                app:civ_border_color="@color/color_primary"
                app:civ_border_width="@dimen/_1sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="@dimen/_10sdp" />

            <Button
                android:id="@+id/btn_upload_camera"
                style="@style/Input.Style.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/text_upload_camera"
                android:textColor="@color/color_secondary"
                app:icon="@drawable/ic_round_camera_alt_24"
                app:iconTint="@color/color_secondary"
                app:layout_constraintEnd_toStartOf="@+id/btn_upload_gallery"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_story_profile" />

            <Button
                android:id="@+id/btn_upload_gallery"
                style="@style/Input.Style.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_upload_gallery"
                android:textColor="@color/color_secondary"
                app:icon="@drawable/ic_round_image_search_24"
                app:iconTint="@color/color_secondary"
                app:layout_constraintBottom_toBottomOf="@+id/btn_upload_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_upload_camera"
                app:layout_constraintTop_toTopOf="@+id/btn_upload_camera" />

            <TextView
                android:id="@+id/tv_story_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_upload_camera"
                tools:text="@string/title_lorem_ipsum" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_story_description_layout"
                style="@style/Input.Style.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/label_story_description_hint"
                app:counterEnabled="true"
                app:counterMaxLength="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_story_title"
                app:placeholderText="@string/label_story_description_placeholder"
                app:startIconTint="@color/color_accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_story_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_story_location"
                style="@style/DescriptionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="3"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_round_person_pin_circle_24"
                app:drawableTint="@color/color_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_story_description_layout"
                tools:text="Location" />

            <TextView
                android:id="@+id/tv_story_date"
                style="@style/DescriptionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_round_time_24"
                app:drawableTint="@color/color_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_story_location"
                tools:text="@string/createdAtFormat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:includeFontPadding="false"
        android:text="@string/text_btn_save"
        android:textColor="@color/color_secondary_light"
        app:backgroundTint="@color/color_accent"
        app:layout_constraintEnd_toStartOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_card_view_3" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/text_btn_back"
        android:textColor="@color/color_secondary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/item_card_view_3" />

</androidx.constraintlayout.widget.ConstraintLayout>