<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_card_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_bookmark_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_accent"
                tools:ignore="ContentDescription" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_story_profile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:elevation="@dimen/_8sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder"
                app:civ_border_color="@color/color_primary"
                app:civ_border_width="@dimen/_1sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_story_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_story_profile"
                tools:text="@string/title_lorem_ipsum" />

            <TextView
                android:id="@+id/tv_story_description"
                style="@style/DescriptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textAlignment="center"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_story_title"
                tools:text="@string/lorem_ipsum_text" />

            <TextView
                android:id="@+id/tv_story_date"
                style="@style/DescriptionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_story_description"
                tools:text="@string/createdAtFormat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>